# Utility-contracts

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUDIT_READY_RUNBOOK.md  AUDIT_TRAIL_RUNBOOK.md  CONTRIBUTING.md  Cargo.toml  DATABASE_MIGRATION_VERSIONING.md  Dockerfile.ci  EMERGENCY_RUNBOOK.md  PR_DESCRIPTION_GRANT_STREAM.md  README.md  SECURE_CALL_INTERFACE_SUMMARY.md  SECURITY.md  main.rs  sanity_check.sh
contracts/: Cargo.toml
docs/: API_RATE_LIMITING.md  BLOCK_EXPLORER_GUIDE.md  CAPACITY_PLANNING_RUNBOOK.md  CI_DOCKER_LAYER_CACHING.md  DISTRIBUTED_TRACING.md  ESP32_SECURE_KEY_STORAGE.md  GRACEFUL_DEGRADATION_RUNBOOK.md  INCIDENT_RUNBOOK_AUTOMATION.md  KAFKA_CONSUMER_LAG_AUTOSCALING.md  PERFORMANCE_REGRESSION_CI.md  PRE_COMMIT_QUALITY.md  REDIS_CACHE_ARCHITECTURE.md  RUNTIME_CONFIG_AUDIT.md  SCHEDULED_BACKUP_VERIFICATION.md  SECRET_ROTATION_ARCHITECTURE.md  SERVICE_MESH_MTLS.md  SLO_MONITORING.md  UTILITY_ERRORS.md  WEBHOOK_ARCHITECTURE.md  WEBHOOK_DEPLOYMENT.md  WEBHOOK_RUNBOOK.md  e2ee-sensitive-payloads.md
examples/: insurance_pool_demo.rs
meter-simulator/: README.md  TYPESCRIPT_BINDINGS.md  package-lock.json  package.json  test-validation.js
monitoring/: secret-rotation-alerts.yml  secret-rotation-dashboard.json
scripts/: DEPLOY_README.md  coverage.sh  deploy.sh  onboard.sh  performance_regression_gate.py  pre-commit-quality.sh  validate_doc_comments.rs  validate_service_mesh.py  verify_backup_restore.sh
src/: lib.rs  secret_rotation.rs
tests/: test_service_mesh_manifests.py
usage-dashboard/: README.md  package-lock.json  package.json
(+98 files in other folders)
