[package]
name = "iot-payload-generator"
version = "0.1.0"
edition = "2021"
description = "Generates mock hardware signatures and JSON payloads for local testing"

[dependencies]
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }